<resources>
    <string name="app_name">COC Messenger</string>

    <!--Navigation Drawer-->
    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>

    <!--bottom_menu.xml-->
    <string name="Home">Home</string>
    <string name="Search">Search</string>

    <!--menu.xml-->
    <string name="Log_out">Log Out</string>

    <!--nav_menu-xml-->
    <string name="Settings">Settings</string>
    <string name="Insert">Insert</string>
    <string name="Rate">Rate</string>
    <string name="About">About</string>
    <string name="Tutorial">Tutorial</string>
    <string name="ApiKey">Api Key</string>
    <string name="ChangeTag">Change Tag</string>
    <string name="ChatList">Chat List</string>
    <string name="PlayerStats">Player Stats</string>
    <string name="ClanStats">Clan Stats</string>
    <string name="EnterEmailAddress">Enter your email address</string>

    <!--activity_chat.xml-->
    <string name="send_message">Send a message</string>

    <!--activity_chat_list.xml-->
    <string name="search_here">Search here...</string>

    <!--activity_f_password.xml-->
    <string name="forgot_passw">Forgot Password</string>
    <string name="enter_mail_addr">Enter your email address</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Reset">Reset</string>
    <string name="Log_in">Log in</string>
    <string name="Sign_up">Sign up</string>

    <!--activity_sign_up.xml-->
    <string name="Name">Name</string>
    <string name="title_activity_settings">App Settings</string>
    <string name="title_activity_about">About Us</string>
    <string name="title_activity_tutorial">Tutorial</string>
    <string name="title_activity_rating">Rating</string>

    <!--activity_apikey.xml-->
    <string name="apiDescription">
        1) Go to <a href="https://developer.clashofclans.com/#/">developer.clashofclans.com</a>
        \n\n2) Check your ip address on websites like <a href="https://www.whatsmyip.org/">whatsmyip.org</a>
        \n\n3) Generate the API key with the ip address of your smartphone
        \n\n4) Insert in the field below the generated key\n
    </string>

    <!-- Preference Titles -->
    <string name="theme">Theme</string>
    <string name="notifications">Notifications</string>
    <string name="bnv_position">Bottom navigation bar on Left</string>

    <!-- Theme Preferences -->
    <string name="theme_title">Default theme</string>

    <!-- Notifications Preferences -->
    <string name="notifications_title">Receive notifications</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- activity_about -->
    <string name="description">Mobile Programming Project by:</string>
    <string name="description2">Thanks to the Clash of Clans APIs.</string>
    <string name="EnterNewUserTag">Enter New User Tag</string>
    <string name="Submit">Submit</string>
    <string name="Top200">Top 200</string>
    <string name="PlayerTag">Player TAG</string>
    <string name="TutorialTitle">Tutorial Title</string>
    <string name="Link">Link</string>
    <string name="Play">Play</string>
    <string name="Pause">Pause</string>
    <string name="Update">Update</string>

    <string name="gabriel">
        <a href="https://github.com/GabrielPiercecchi/">
            Gabriel Piercecchi
        </a>
    </string>
    <string name="tosca">
        <a href="https://github.com/toscap2002/">
            Tosca Pierro
        </a>
    </string>
    <string name="lorenzo">
        <a href="https://github.com/lorenzozulli/">
            Lorenzo Zulli
        </a>
    </string>

    <!-- activity_leaderboards.xml -->
    <string name="select_location">Select Location</string>
    <string name="players">Players</string>
    <string name="builders">Builders</string>
    <string name="clans">Clans</string>
    <string name="stats_player">Stats Player</string>
    <string name="no_image_available">No image available</string>
    <string name="Open_PDF_Tutorial">Click here to open the PDF with the full explanation of the app.</string>
</resources>