<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory app:title="@string/theme">

        <SwitchPreferenceCompat
            android:id="@+id/theme"
            app:key="theme"
            app:title="Dark Theme"
            app:defaultValue="true"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/bnv_position">

        <ListPreference
            app:defaultValue="center"
            app:entries="@array/bnv_entries"
            app:entryValues="@array/bnv_values"
            app:key="bnv"
            app:title="@string/bnv_position"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/notifications">

        <SwitchPreferenceCompat
            app:key="receive_notifications"
            app:title="@string/notifications_title"
            app:defaultValue="true"/>

    </PreferenceCategory>

</PreferenceScreen>