<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ForgotPassword">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/coclogo"
            android:layout_marginTop="10dp"/>


        <TextView
            android:id="@+id/desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/app_logo"
            android:text="@string/EnterEmailAddress"
            android:textSize="20sp"
            android:padding="10dp"/>

        <EditText
            android:id="@+id/editBox"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            android:layout_below="@id/desc"
            android:background="@drawable/edit_background"
            android:hint="@string/Email"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:textSize="20sp"
            android:minHeight="50dp"/>


        <Button
            android:id="@+id/btnReset"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Reset"
            android:layout_marginStart="120dp"
            android:layout_marginEnd="120dp"
            android:layout_below="@id/editBox"
            android:background="@drawable/filled_button"
            android:textColor="@color/darkWhite"
            android:textSize="20sp"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"/>

        <TextView
            android:id="@+id/txtTutorial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btnReset"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:background="@android:color/holo_red_light"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/Tutorial"
            android:textAllCaps="true"
            android:textColor="@color/darkWhite"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>