<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/nestedScrollView"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textIsSelectable="true"
    tools:context=".view.TutorialActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/textViewTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="@string/TutorialTitle"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/flamingoPink"/>

        <TextView
            android:id="@+id/textViewDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/TutorialTitle"
            app:layout_constraintTop_toBottomOf="@id/textViewTitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:padding="10dp"
            android:textIsSelectable="true"/>

        <LinearLayout
            android:id="@+id/linkLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/textViewDescription"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:padding="5dp">

            <ImageView
                android:id="@+id/linkIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/linkicon"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/textViewLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:text="@string/Link"
                android:textColor="@color/lightBlue"
                android:layout_marginStart="8dp"
                android:textIsSelectable="true"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/linkLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/linkLayout"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp"
            android:layout_marginStart="16dp"
            android:padding="5dp">

            <ImageView
                android:id="@+id/linkIcon2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/linkicon"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/textViewLink2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAlignment="viewStart"
                android:text="@string/Link"
                android:textColor="@color/lightBlue"
                android:layout_marginStart="8dp"
                android:textIsSelectable="true"/>

        </LinearLayout>

        <ImageView
            android:id="@+id/imageTagTutorial"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/taglocation"
            app:layout_constraintTop_toBottomOf="@id/linkLayout2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <ImageView
            android:id="@+id/imageViewSite"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/clashapilogin"
            app:layout_constraintTop_toBottomOf="@id/imageTagTutorial"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <!-- Aggiungi questo codice sopra l'ultima ImageView -->
        <VideoView
            android:id="@+id/videoView"
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@id/imageViewSite"/>

        <!-- Aggiungi il codice per il pulsante di riproduzione sotto al VideoView -->
        <Button
            android:id="@+id/playButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Play"
            app:layout_constraintTop_toBottomOf="@id/videoView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

        <ImageView
            android:id="@+id/imageViewApp"
            android:layout_width="match_parent"
            android:layout_height="600dp"
            android:src="@drawable/imageviewapp"
            app:layout_constraintTop_toBottomOf="@id/playButton"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
